# python-study-notes

./: .gitignore  COMMIT_GUIDE.md  LICENSE  README.md  TaskInstructionTemplate.md  WRITING_GUIDE.md  pyproject.toml
basics/01_comments/: comments.py
basics/02_indentation/: indentation.py
basics/03_variable/: README.md  variable.py
basics/03_variables/docs/: 01_creating_variables.md  02_naming_rules.md  03_data_types_overview.md  04_variables_as_references.md  05_variable_reassignment.md  06_multiple_assignment.md  07_common_mistakes.md
basics/03_variables/examples/: 01_creating_variables.py  02_naming_rules.py  03_data_types_overview.py  04_variables_as_references.py
environment/: README.md  tools.md
test/: format_test.py  lint_test.py  run_test.py  test_math.py
