[project]
name = "python-study-notes"
version = "0.1.0"
description = ""
authors = [
    {name = "bc8c",email = "bc8c@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = false

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.8,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle rules
# F: Pyflakes rules (includes unused variables)
select = ["E", "F"]
ignore = []
